--- a/index.html
+++ b/index.html
@@ -1537,7 +1537,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 <div class="NL">
 
   <div class="Noel">
-    <div style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 25px; color:rgba(0, 0, 139, 0.639)">
+    <div style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 23px; color:rgba(31, 31, 211, 0.736)">
       Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël pendant lequel
       les enfants étaient invités à un repas autour duquel une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
       recueillir leurs réponses respectives. 
@@ -1545,7 +1545,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
   <div>
 <img src="https://zupimages.net/up/22/31/z42x.jpg">
 <figure>
-<figcaption style="font-family: 'arial black'; font-size: 15px; color: #198dc8;">
+<figcaption style="font-family: 'arial black'; font-size: 15px; color: #1c97d5;">
  Noël 2016 organisé par Tiki N'Yiki au profit des enfants
 </figcaption>
 </figure>
@@ -1555,7 +1555,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 
 </div>
 
-Vu les innombrables défis sociaux dont les barrières sociales, le manque d'infrastructures et de services adaptés et adéquats, vu les discriminations recurrents, il est sans doute évident que les personnes handicapées ne sont pas prises en priorité et sont ignorées. 
+Compte tenu des innombrables défis sociaux y compris les barrières sociales, le manque d'infrastructures, de services adéquats et adaptés, des discriminations recurrentes, il est sans doute évident que les personnes handicapées font face à de nombreux challenges sociaux et ne sont certainement pas prises en priorité ni par les autorités ni par la société. 
 <br>  
         <br> Elles n'ont pas la vie facile et doivent s'activer plus fort pour réaliser leurs rêves. Et c'est débile 
 que les gouvernements font peu de choses pour les aider financièrement en termes de donner un chèque mensuel aux personnes qui ne peuvent pas travailler.  
@@ -1912,13 +1912,19 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       Fervent défenseur des droits de personnes handicapées, il s'est engagé et a travaillé dans plusieurs associations pour l'éducation,
                        la promotion et la défense des personnes handicapées dont les enfants. 
                        <br>
-                       </a> Il y a enseigné des enfants handicapés et orphelins de 2006 à 2014. En outre il a animé de multiples séances de sensibilisation avec thème focal "Handicap et Inclusion Sociale"
-                       <br>En outre pendant ses voyages en Europe il a donné des conférences en Suisse et en Allemagne sur l'association PAAS NEERE et son impact à travers les personnes handicapées de la localité.
+                       <br>
+                       En 2006 Gabriel a été un des membres fondateurs de l'association PAAS NEERE.
+                       </a> Il a enseigné des enfants handicapés et orphelins, animé de multiples séances de sensibilisation avec thème focal "Handicap et Inclusion Sociale" de 2006 à 2014.
+                       <br>
+                       <br>
+                       En 2007, 2008, 2013, Gabriel a donné des conférences pendant ses voyages en Europe notament en Suisse et en Allemagne sur l'association PAAS NEERE et son impact sur les communautés cibles de la région.
                       <br>
-                      <br>
-                      En 2005 Gabriel a été un des membres fondateurs de l'association PAAS NEERE.
                       <br>
                       En 2012, il a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour sa contribution au développement et l'épanouissement des personnes handicapées de sa région.
+                      <br>
+                      <br>
+                      En 2016 Gabriel a projetté Tiki N'Yiki
+                      <br>
                       <br>
                       En 2017 il était obligé de s'exiler au Canada pour des raisons sécuritaires si bien que certaines activités de Tiki N'Yiki y compris le volet EDUCATION ont été interrompues mais vont être redéfinies si les conditions sont réunies. 
                       <br>
