--- a/index.html
+++ b/index.html
@@ -1361,12 +1361,12 @@ function myFunction() {
               <br><b style="color:#ff0a06">Tiki N'Yiki</b> est une vision-cadre pour promouvoir, défendre et protéger les droits des personnes handicapées et particuliérement les enfants handicapés. Lancée en 2016, Tiki N'Yiki veut contribuer à un bel épanouissment des enfants handicapés en soutenant toute initiative encourageant leur éducation pour une meilleure inclusion sociale au Burkina Faso. 
               <br>
               <br>
-              Etymologiquement Tiki N'Yiki est composé de deux (2) mots <a href="https://fr.wikipedia.org/wiki/Mossi_(peuple)" target="blank">[<b>Tiki et N'Yiki</b>] </a> du Mooré, une langue au <a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="blank">Burkina Faso en Afrique de l'Ouest</a>:           
+              Etymologiquement Tiki N'Yiki est composé de deux (2) mots <a href="https://fr.wikipedia.org/wiki/Moré" target="blank">du Moré</a> [<b>Tiki et N'Yiki</b>] une langue au <a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="blank">Burkina Faso</a>:           
               <br>
               <br>
-              <b style="color:#ff0a06">a. Tiki</b> signifie <b>Appuie-toi</b>
+              <b style="color:#ff0a06">a. Tiki</b> signifie <b style="color:green">Appuie-toi</b>
               <br>
-              <b style="color:#ff0a06">b. N'Yiki</b> signifie <b>Lève-toi</b>. 
+              <b style="color:#ff0a06">b. N'Yiki</b> signifie <b style="color:green">Lève-toi</b>. 
           
           </p>
         
