--- a/index.html
+++ b/index.html
@@ -1389,9 +1389,9 @@ function myFunction() {
         Le Burkina Faso ou pays des hommes intègres est un pays sahélien, enclavé au coeur de l'Afrique de l'Ouest et s'étend sur une superficie de :
         <br>
         <br>
-        <em style="color: orangered">274.220 kilomètres carrés <a href="https://donnees.banquemondiale.org/indicator/AG.SRF.TOTL.K2?locations=BF" target="_blank">[Sources: Données 2020 de la Banque Mondiale] </a>avec une population approximativement égale à 23.300.000 habitants <a href="https://www.unfpa.org/data/world-population/BF" target="_blank"> [Sources: UNFPA]</a>. 
+        <em style="color: rgb(41, 101, 197)">274.220 kilomètres carrés <a href="https://donnees.banquemondiale.org/indicator/AG.SRF.TOTL.K2?locations=BF" target="_blank">[Sources: Banque Mondiale] </a>avec une population approximativement égale à 23.300.000 habitants <a href="https://www.unfpa.org/data/world-population/BF" target="_blank"> [Sources: UNFPA]</a>. 
           <br>
-          Il partage des frontières au nord; nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin.  
+          Il partage des frontières au nord, nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin.  
         </em>  
         <br>
         Le Burkina Faso bénéficie d'un climat tropical sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. En dépit de cette réalité climatique, son économie repose en grande partie sur l'agriculture, l'élévage et le maraîchage.
