--- a/index.html
+++ b/index.html
@@ -1301,7 +1301,7 @@ function myFunction() {
       <div class="KRT">
                     <div>
                         <div style="text-align: center; padding: 3px; background: rgba(61, 173, 233, 0.935); color: #fff; font-family: 'verdana'; font-size: 15px;">
-                          Gabriel dispense un de ses derniers cours au Burkina Faso
+                          Un des derniers cours dispensé par le promoteur de Tiki N'Yiki au Burkina Faso
                         </div>
 
                         <div class="k1-image">
