--- a/index.html
+++ b/index.html
@@ -1491,7 +1491,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 </span>
   <p>
     <br>
-    Les personnes handicapées sont discriminées partout à travers le monde. Mais celles d'Afrique et spécialement du Burkina Faso expérimentent de <a href="https://lepays.bf/personnes-handicapees-au-burkina-avec-eux-nous-avons-parle-exclusion-discrimination-frustration-sexe/" target="_blank">sévères discriminations au quotidien </a>.
+    Les personnes handicapées sont discriminées partout à travers le monde. Mais celles d'Afrique et spécialement du Burkina Faso expérimentent de <a href="https://www.ouestaf.com/personnes-vivant-avec-un-handicap-marginalisees-par-letat-au-burkina/" target="_blank">sévères marginalisations de l'état</a>.
     <br>  
     <br>
     Sinon pourquoi des personnes handicapées dépendantes et vivant isolées sont oubliées quand on doit leur apporter à manger ou à boire, les faire prendre un bain ou leur apporter un besoin quelconque ?
