--- a/index.html
+++ b/index.html
@@ -1606,7 +1606,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <br>
         <b style="color:#ff0a06">Pour ce faire l'inclusion doit être encouragée et soutenue. </b>
         <br>
-        <b style="font-size: 21px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: rgba(3, 123, 252, 0.972); text-align: justify; line-height: 23px;">
+        <b style="font-size: 21px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: rgba(3, 123, 252, 0.972); text-align: justify; line-height: 25px;">
           Avoir le droit à l'éducation, aux soins de santé, être à l'abri de l'insécurité alimentaire font partie des objectifs cruciaux que Tiki N'Yiki s'est fixés afin d'aider les enfants handicapés au Burkina Faso.</b>
     </p>
 </div>
@@ -1908,7 +1908,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       
                       <br>
                     
-                        La vision de Tiki N'Yiki a pour promoteur Gabriel, une personne à mobilité réduite. Il a étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
+                        La vision de Tiki N'Yiki a pour promoteur Gabriel, une personne à mobilité réduite qui a étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
                       Fervent défenseur des droits de personnes handicapées, il s'est engagé et a travaillé dans plusieurs associations pour l'éducation,
                        la promotion et la défense des personnes handicapées dont les enfants. 
                        <br>
