--- a/index.html
+++ b/index.html
@@ -1503,7 +1503,8 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
     Pourquoi les personnes handicapées sont mises de côté, ignorées quand il s'agit de leur apporter des soins médicaux qu'il faut ? 
     <br>  
     <br>
-    <em style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: green;">L'unique réponse satisfaisante et commune à ces questions est : <b style="color: red;">LA DISCRIMINATION. </b> </em>  
+    <em style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: green;">L'unique réponse satisfaisante et commune à ces questions est : 
+      <a href="https://www.chrc-ccdp.gc.ca/fr/droits-de-la-personne/quest-ce-que-la-discrimination" target="_blank"><b style="color: red;">LA DISCRIMINATION. </b> </em>  </a> 
     <br>  
     <br>
     <b style="color: rgb(0, 174, 255); font-size: 19.5px;">Mais il faut que ces discriminations cessent et que les barrières sociales tombent car les personnes handicapées sont avant tout des êtres humains qui ont aussi des droits humains.</b>
