--- a/index.html
+++ b/index.html
@@ -1361,7 +1361,7 @@ function myFunction() {
               <br><b style="color:#ff0a06">Tiki N'Yiki</b> est une vision-cadre pour promouvoir, défendre et protéger les droits des personnes handicapées et particuliérement les enfants handicapés. Lancée en 2016, Tiki N'Yiki veut contribuer à un bel épanouissment des enfants handicapés en soutenant toute initiative encourageant leur éducation pour une meilleure inclusion sociale au Burkina Faso. 
               <br>
               <br>
-              Etymologiquement Tiki N'Yiki est composé de deux (2) mots <a href="https://fr.wikipedia.org/wiki/Moré" target="blank">du Moré</a> [<b>Tiki et N'Yiki</b>] une langue au <a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="blank">Burkina Faso</a>:           
+              Etymologiquement Tiki N'Yiki est composé de deux (2) mots <a href="https://fr.wikipedia.org/wiki/Moré" target="blank">du Mooré (Moré)</a> [<b>Tiki et N'Yiki</b>] une langue au <a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="blank">Burkina Faso</a>:           
               <br>
               <br>
               <b style="color:#ff0a06">a. Tiki</b> signifie <b style="color:green">Appuie-toi</b>
@@ -1398,9 +1398,8 @@ function myFunction() {
         Heureusement elle se diversifie à travers d'autres secteurs comme les services et le secteur des nouvelles technologies.  
         <br> 
         Par ailleurs son économie reste fortement impactée par une crise sécuritaire qui sécoue la sous-région y compris le Mali et le Niger dont il partage des frontières communes et le tout dans une réalité d'inflation globale. Ce qui rend incertain les lendemains pour de nombreux Burkinabès surtout les déplacés internes.     
-        <br>  
-        <br>     
-        Malgré une population croissante approximant 2 millions de personnes handicapées, séquelles de la poliomyétlie (Polio), de maladies, de vieillesse et/ou de quelconques accidents, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, discriminées et livrées à elles-mêmes. 
+          
+        Malgré une population croissante de plus de <a href="https://www.adry.up.ac.za/section-b-country-reports-2022/republique-du-burkina-faso" target="_blank">3 226 627 de personnes handicapées [Sources: African Disability - 2020 Rights Yearbook =>Burkina Faso =>1) Les Indicateurs Démographiques =>1.3) Nombre Total et Pourcentage des Personnes Handicapées au Burkina Faso]</a> dont le handicap est causé soit par la Polio (poliomyétlie), soit d'autres maladies, de vieillesse et/ou de cas accidentels, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, discriminées et livrées à elles-mêmes. 
         <br> 
         <br> 
         Ceci n'est pas seulement un fait causé par une culture toxique d'exclusion dûe aux discriminations et barrières sociales,
