--- a/index.html
+++ b/index.html
@@ -1386,7 +1386,7 @@ function myFunction() {
            
             <div class="CRT1">
             
-        Le Burkina Faso ou pays des hommes intègres est un pays sahélien, enclavé au coeur de l'Afrique de l'Ouest et s'étend sur une superficie de :
+              <a href="https://www.gouvernement.gov.bf/accueil" target="_blank"> Le Burkina Faso ou pays des hommes intègres</a> est un pays sahélien, enclavé au coeur de l'Afrique de l'Ouest et s'étend sur une superficie de :
         <br>
         <br>
         <em style="color: rgb(41, 101, 197)">274.220 kilomètres carrés <a href="https://donnees.banquemondiale.org/indicator/AG.SRF.TOTL.K2?locations=BF" target="_blank">[Sources: Banque Mondiale] </a>avec une population approximativement égale à 23.300.000 habitants <a href="https://www.unfpa.org/data/world-population/BF" target="_blank"> [Sources: UNFPA]</a>. 
