--- a/index.html
+++ b/index.html
@@ -1522,8 +1522,8 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
     <br>  
     Combien d'établissements scolaires et universitaires publics ou privés, d'espaces publics et administratifs, de lieux de culte, de centres d'achat, culturels ou sportifs sont equipés de rampes pour favoriser une meilleure accessibilité des personnes handicapées? 
     <br>  
-    <br> Quel quota est réservé dans d'autres concours aux personnes handicapées qui ne peuvent pas participer à certains concours publics tout simplement parce que l'éducation physique est une obligation? <br>  
-    
+    <br> Quel quota de représentativité est réservé aux personnes handicapées physiques dans les concours de la fonction publique auxquels elles ne peuvent pas participer parce que l'éducation physique est une obligation? <br>  
+    <br>  
         Il est difficile de dire exactement des chiffres illustratifs mais l'indifférence de la société est flagrante et inquiétante. Si bien que même sans chiffres, de par les comportements et les agissements envers les personnes différentes dont les personnes handicapées, il est très évident que beaucoup reste à faire pour mieux améliorer et renforcer le vivre-ensemble. 
   </p>
     <hr style="color: rgb(13, 31, 136); justify-self: center;"> 
