--- a/index.html
+++ b/index.html
@@ -180,15 +180,15 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #0e0e0ee7;
+                 background: #35a9e3e0;
                  width: 100%;
                  height: 98px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0.5px 2rem 0.1px #c0c0c02a;
-                 border-bottom: 4.44rem solid #fffffffd;  
+                 box-shadow: 0 0.5px 2rem 0.1px #3c3c3c2a;
+                 border-bottom: 4.47rem solid #fffffffd;  
                  border-top-left-radius: 1.95rem;
                  border-top-right-radius: 1.95rem;
           }
@@ -256,13 +256,13 @@
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 0.75rem;
+            margin-top: 1.55rem;
           }
 
           .myDiv:hover{
-            border-bottom: 0.8rem solid #000;
+            border-bottom: 1rem solid #000;
       color: #000;
-      transition: 0.25s ease-in;
+      transition: 0.28s ease-in;
       
           }
 
@@ -278,13 +278,13 @@
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 0.75rem;
+            margin-top: 1.55rem;
           }
 
           .myDiv1:hover{
-            border-bottom: 0.8rem solid rgb(166, 60, 166);
-      color: rgb(166, 60, 166);
-      transition: 0.22s ease-in;
+            border-bottom: 1rem solid #000;
+      color: #000;
+      transition: 0.28s ease-in;
           }
 
           .myDiv2{
@@ -299,13 +299,13 @@
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 0.75rem;
+            margin-top: 1.55rem;
             }
 
           .myDiv2:hover{
-            border-bottom: 0.8rem solid red;
-      color: red;
-      transition: 0.22s ease-in;
+            border-bottom: 1rem solid #000;
+      color: #000;
+      transition: 0.28s ease-in;
           }
 
           .myDiv3{
@@ -320,13 +320,13 @@
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 0.75rem;
+            margin-top: 1.55rem;
            }
 
           .myDiv3:hover{
-            border-bottom: 0.8rem solid rgba(0, 0, 139, 0.771);
-      color: rgba(0, 0, 139, 0.771);
-      transition: 0.22s ease-in;
+            border-bottom: 1rem solid #000;
+      color: #000;
+      transition: 0.28s ease-in;
           }
 
           .myDiv6{
@@ -341,13 +341,13 @@
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 0.75rem;
+            margin-top: 1.55rem;
             }
 
           .myDiv6:hover{
-            border-bottom: 0.8rem solid green;
-      color: green;
-      transition: 0.22s ease-in;
+            border-bottom: 1rem solid #000;
+      color: #000;
+      transition: 0.28s ease-in;
           }
 
 
@@ -461,7 +461,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: #0e0e0ee7;
+    background: #35a9e3e0;
     justify-content: center;
     align-items: center;
     padding: 10px;
@@ -886,8 +886,9 @@ animation: auto 12s infinite ease-in;
     font-family: georgia;
     justify-content: center;
     align-items: center;
-    border: 0.13rem solid rgba(122, 122, 122, 0.801); 
-    color: orangered; 
+    background: #222222eb;
+    border: 0.1rem solid rgba(152, 152, 152, 0.801); 
+    color: #fff; 
     border-radius: 1rem;
     padding: 8px; 
     font-size: 20px;
