--- a/index.html
+++ b/index.html
@@ -1538,10 +1538,10 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 <div class="NL">
 
   <div class="Noel">
-    <div style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 23px; color:rgba(31, 31, 211, 0.736)">
-      Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël pendant lequel
+    <div style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: left; line-height: 22px; color:rgba(31, 31, 211, 0.736)">
+      Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël à l'approche de chaque 25 décembre (Jour de Nativité) pendant lequel
       les enfants étaient invités à un repas autour duquel une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
-      recueillir leurs réponses respectives. 
+      recueillir leurs diverses réactions. 
     </div>
   <div>
 <img src="https://zupimages.net/up/22/31/z42x.jpg">
