--- a/index.html
+++ b/index.html
@@ -1167,9 +1167,9 @@ function myFunction() {
 
       <div class="Joint-Point">
 
-      <a href="#" target="blank">
+      <a href="https://tikiyiki.github.io/bu/">
           
-        <div class="TYK1"style="border-radius: 50%; background: ;">
+        <div class="TYK1">
         Tiki N'Yiki
           </div>
             
@@ -1177,7 +1177,7 @@ function myFunction() {
 
             <div class="Unify"> 
 
-        <a href="https://tikiyiki.github.io/bu/" target="blank">
+        <a href="https://tikiyiki.github.io/bu/">
         <div class="myDiv">
           <b>Tiki N'Yiki</b>
         </div>
