--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #35a9e3e0;
+                 background: #35a9e3da;
                  width: 100%;
                  height: 98px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0.5px 1.8rem 0.1px #4242422a;
+                 box-shadow: 0 0.5px 1.8rem 0.1px #45454536;
                  border-bottom: 4.47rem solid #fffffffd;  
                  border-top-left-radius: 1.95rem;
                  border-top-right-radius: 1.95rem;
@@ -473,7 +473,7 @@ hr{
    
 }
 ::-webkit-scrollbar-track-piece{
-    background: rgba(218, 218, 218, 0.905);
+    background: rgba(201, 201, 201, 0.905);
     width: auto;
     padding: 20px;
 }
@@ -1120,6 +1120,7 @@ function myFunction() {
 }
 
 </script>
+
 <a name="Top"></a>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1302,7 +1303,7 @@ function myFunction() {
       <div class="KRT">
                     <div>
                         <div style="text-align: center; padding: 3px; background: rgba(61, 173, 233, 0.935); color: #fff; font-family: 'verdana'; font-size: 15px;">
-                          Un des derniers cours dispensé par le promoteur de Tiki N'Yiki au Burkina Faso
+                          Un des derniers cours que le promoteur a dispensé à Tiki N'Yiki
                         </div>
 
                         <div class="k1-image">
