--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 .footer{
         display: flex;
         width: 100%;
-        height: 442px;
+        height: 422px;
         position: relative;
         font-family: 'trebuchet ms';
         font-size: 16px;
@@ -501,6 +501,9 @@ hr{
     padding-top: 5rem; 
     opacity: 0.97;
     margin-top: 0.75rem;
+    margin-bottom: 1rem;
+    border-bottom-right-radius: 10rem;
+    border-bottom-left-radius: 10rem;
 }
 .content1 a:hover{
     color: red;
@@ -897,7 +900,7 @@ animation: auto 12s infinite ease-in;
     border-top: 1rem;
     border-radius: 1rem;
     text-align: center;
-    margin-top: 1rem;
+    margin-top: 2rem;
     margin-bottom: 1rem;
 }
 .SPan:hover{
