--- a/index.html
+++ b/index.html
@@ -250,13 +250,13 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             font-size: 17px;
             height: 40px;
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 1.55rem;
+            margin-top: 1.542rem;
           }
 
           .myDiv:hover{
@@ -272,13 +272,13 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             font-size: 17px;
             height: 40px;
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 1.55rem;
+            margin-top: 1.542rem;
           }
 
           .myDiv1:hover{
@@ -293,13 +293,13 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             font-size: 17px;
             height: 40px;
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 1.55rem;
+            margin-top: 1.542rem;
             }
 
           .myDiv2:hover{
@@ -314,13 +314,13 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             font-size: 17px;
             height: 40px;
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 1.55rem;
+            margin-top: 1.542rem;
            }
 
           .myDiv3:hover{
@@ -335,13 +335,13 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             font-size: 17px;
             height: 40px;
             width: 100%;
             color: rgba(0, 0, 70, 0.924);
             background: transparent;
-            margin-top: 1.55rem;
+            margin-top: 1.542rem;
             }
 
           .myDiv6:hover{
