--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
           .myDiv:hover{
             border-bottom: 1rem solid #000;
-      color: #000;
+      color: red;
       transition: 0.28s ease-in;
       
           }
@@ -283,7 +283,7 @@
 
           .myDiv1:hover{
             border-bottom: 1rem solid #000;
-      color: #000;
+            color: red;
       transition: 0.28s ease-in;
           }
 
@@ -304,7 +304,7 @@
 
           .myDiv2:hover{
             border-bottom: 1rem solid #000;
-      color: #000;
+            color: red;
       transition: 0.28s ease-in;
           }
 
@@ -325,7 +325,7 @@
 
           .myDiv3:hover{
             border-bottom: 1rem solid #000;
-      color: #000;
+            color: red;
       transition: 0.28s ease-in;
           }
 
@@ -346,7 +346,7 @@
 
           .myDiv6:hover{
             border-bottom: 1rem solid #000;
-      color: #000;
+            color: red;
       transition: 0.28s ease-in;
           }
 
