--- a/index.html
+++ b/index.html
@@ -512,29 +512,37 @@ hr{
 .YT{
   display: grid;
   grid-template-columns: 0.5fr 1fr 0.5fr;
-  column-gap: 0.25rem;
+  column-gap: 0.15rem;
   width: 72%;
   justify-content: center;
   justify-items: center;
-  height: 350px;
+  height: 362px;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
  line-height: 25px; 
  font-size: 23px; 
  text-align: left; 
  color:rgba(151, 149, 149, 0.975);
  word-spacing: 1px;
- border: 0.11rem solid rgba(197, 197, 197, 0.744);
+ border-top: 0.1rem solid rgba(179, 179, 179, 0.744);
+ border-bottom: 0.1rem solid rgba(179, 179, 179, 0.744);
+ 
 }
 
 .YT:hover{
-  background: #ecf3ff2d;
-  color: #02a6ff;
-  border: 0.15rem solid rgba(197, 197, 197, 0.744);
-  animation: 0.5s ease;
+  border: none;
+  border-top: 0.1rem solid rgba(179, 179, 179, 0.744);
+  animation: 1s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
  }
  .YTY{
   padding: 5px;
  }
+
+ .YTY:hover{
+  box-shadow: 5px 7px 0.6rem 0.5px rgba(181, 181, 181, 0.811);
+ }
+
+ 
 .YTY img{
 width: 100%;
 height: auto;
@@ -555,7 +563,9 @@ opacity: 1;
 }
 .YTP:hover{
   color:green;
-  transition: 0.5s ease;
+  border: none;
+  animation: 1s linear;
+  box-shadow: 5px 7px 0.6rem 0.5px rgba(181, 181, 181, 0.811);
 }
 
 .YTPP{
@@ -563,6 +573,12 @@ opacity: 1;
   grid-template-rows: 0.8fr 1.2fr;
   padding: 4px;
 }
+
+.YTPP:hover{
+  box-shadow: 5px 7px 0.6rem 0.5px rgba(181, 181, 181, 0.811);
+}
+
+
 
 .TYPP{
   width: 100%;
@@ -577,12 +593,13 @@ opacity: 0.88;
 
 .TYPP img:hover{
 opacity: 1;
+
 }
 
 .TYP{
-  border-left: 0.25rem solid rgba(203, 203, 203, 0.876); 
-  border-top: 0.25rem solid rgba(203, 203, 203, 0.876); 
-  border-right: 0.25rem solid rgba(203, 203, 203, 0.876); 
+  border-left: 0.15rem solid rgba(203, 203, 203, 0.876); 
+  border-top: 0.15rem solid rgba(203, 203, 203, 0.876); 
+  border-right: 0.15rem solid rgba(203, 203, 203, 0.876); 
   justify-content: center; 
   align-items: center; 
   font-size: 17.85px;
@@ -596,7 +613,9 @@ opacity: 1;
 }
 .TYP:hover{
   color: #000;
-  transition: 0.5s ease;
+  padding: 3px;
+  animation: 1s linear;
+  box-shadow: 5px 7px 0.6rem 0.5px rgba(181, 181, 181, 0.811);
 }
 
 .button2{
@@ -752,6 +771,12 @@ animation: auto 12s infinite ease-in;
   justify-items: center;
   width: 100%;
   height: auto;
+  padding: 4px;
+}
+.Noel:hover{
+  padding: 4px;
+  animation: 1s linear;
+  box-shadow: 10px 7px 0.58rem 0.5px rgba(168, 168, 168, 0.811);
 }
 
 .Noel img{
@@ -937,10 +962,22 @@ animation: auto 12s infinite ease-in;
 .AK{
   width: 100%;
   height: auto;
+  padding: 4px;
 }
 .AK img{
   width: 100%;
   height: auto;
+}
+
+.AK:hover{
+  padding: 4px;
+  animation: 1s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+}
+
+.KA:hover{
+  animation: 1s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 .student{
@@ -1285,6 +1322,7 @@ function myFunction() {
          
           </b>
         </div> 
+
         <div class="TYPP">
         <img src="https://www.azquotes.com/vangogh-image-quotes/53/20/Quotation-Stevie-Wonder-We-all-have-ability-The-difference-is-how-we-use-53-20-36.jpg" alt="Stevie Wonder">
         <figure>
@@ -1293,6 +1331,7 @@ function myFunction() {
             </figcation>
           </figure>  
       </div>
+
       </div> 
     </a>
 
@@ -1539,6 +1578,8 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
       </strong>
     </span>
 <br>
+
+<a href="https://fr.wikipedia.org/wiki/Sapin_de_No%C3%ABl" target="_blank">
 <div class="NL">
 
   <div class="Noel">
@@ -1559,7 +1600,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 </div>
 
 </div>
-
+</a>
 Compte tenu des innombrables défis sociaux y compris les barrières sociales, le manque d'infrastructures, de services adéquats et adaptés, des discriminations recurrentes, il est sans doute évident que les personnes handicapées font face à de nombreux challenges sociaux et ne sont certainement pas prises en priorité ni par les autorités ni par la société. 
 <br>  
         <br> Elles n'ont pas la vie facile et doivent s'activer plus fort pour réaliser leurs rêves. Et c'est débile 
@@ -1580,7 +1621,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <br>  
         Certains handicapés n'ont pas de moyens financiers pour s'offrir de moyens de déplacements comme des tricycles. Elles n'ont pas d'aides financières ou de dotations d'équipements auxiliaires de l'état. Certain-es vivent isolé-es dans des coins réculés en campagne et n'ont ni voiture, ni moto ou même un tricycle pour se déplacer. 
         <br>
-
+        <a href="https://dictionnaire.reverso.net/francais-definition/%C3%A9tudes+acad%C3%A9miques" target="_blank">
         <div class="Ecole">
 
         <div class="AK">
@@ -1593,7 +1634,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </figure>
     </div>
 
-  <div style="display: flex; justify-content: center; align-items: center;">
+  <div class="KA"style="display: flex; justify-content: center; align-items: center;">
     <p style="color:#0274fff9; font-size: 17px; font-family: 'trebuchet ms', Helvetica, sans-serif; text-align: left; padding: 10px; line-height: 22px;">
       Vu ces différentes difficultés faites de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un centre adapté nommé Accadémie Tiki N'Yiki.
       Cette accadémie sera constituée de salles de classe, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines pour assurer un bon fonctionnement. Les étudiant-es handicapé-es dont les familles habitent en campagne seront permis-es à rester dans les logements adaptés durant le cursus scolaire et bénéficieront de moyens de déplacement 
@@ -1602,6 +1643,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
    <br>
         </div>
       </div>
+      </a>
+
         En étant handicapés, pouvoir loger et étudier au centre Tiki N'Yiki établi en ville sera synonyme de proximité d'importants services comme l'hôpital, les lieux de culte, les centres d'achat, les lieux de sport, de divertissement. 
         Au déla de cette vie en ville, la discrimination va s'amoindrir vis-à-vis de la vie en campagne ou l'inclusion est très balbutiante voire inexistante. 
         <br>
