--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@ box-shadow: 8px 8px 0.7rem 0.5px rgba(165, 165, 165, 0.724);
   width: 100%;
   height: 85%;
 }
-.CC2 img:hover{
+.CC2:hover{
   animation: 1s linear;
 box-shadow: 8px 8px 0.7rem 0.5px rgba(165, 165, 165, 0.724);
 }
