--- a/index.html
+++ b/index.html
@@ -844,6 +844,7 @@ animation: auto 12s infinite ease-in;
     line-height: 30px;
     word-spacing: 1px;
     font-family: 'Inter' sans sherif;
+    padding: 10px;
 }
 
 .CRT2{
@@ -853,6 +854,7 @@ animation: auto 12s infinite ease-in;
   column-gap: 2rem;
   justify-content: space-between;
   justify-items: center;
+  padding: 10px;
 }
 
 .CRT2 img{
@@ -860,14 +862,24 @@ animation: auto 12s infinite ease-in;
   height: 300px;
 }
 
+.AFRI{
+  padding: 5px;
+}
+
 .AFRI:hover{
   animation: 1s linear;
   box-shadow: 10px 7px 0.58rem 0.5px rgba(168, 168, 168, 0.811);
+  padding: 5px;
+}
+
+.BUR{
+   padding: 5px;
 }
 
 .BUR:hover{
   animation: 1s linear;
   box-shadow: 10px 7px 0.58rem 0.5px rgba(168, 168, 168, 0.811);
+  padding: 5px;
 }
 
 .PERCU:hover{
@@ -1668,6 +1680,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 
 </div>
 </a>
+<br> 
 Compte tenu des innombrables défis sociaux y compris les barrières sociales, le manque d'infrastructures, de services adéquats et adaptés, des discriminations recurrentes, il est sans doute évident que les personnes handicapées font face à de nombreux challenges sociaux et ne sont certainement pas prises en priorité ni par les autorités ni par la société. 
 <br>  
         <br> Elles n'ont pas la vie facile et doivent s'activer plus fort pour réaliser leurs rêves. Et c'est débile 
