--- a/index.html
+++ b/index.html
@@ -1121,12 +1121,12 @@ box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 
 .SEKU{
   display: grid;
-  grid-template-rows: 0.5fr 0.5fr;
-  column-gap: 0.5rem;
+  grid-template-rows: 0.45fr 0.45fr;
+  column-gap: 1rem;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: 760px;
+  height: 670px;
   margin-top: 0.5rem;
   font-size: 17.5px; 
   color: rgba(11, 11, 11, 0.983);
@@ -1724,7 +1724,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         </div>
       </div>
       </a>
-
+      <br>
         En étant handicapés, pouvoir loger et étudier au centre Tiki N'Yiki établi en ville sera synonyme de proximité d'importants services comme l'hôpital, les lieux de culte, les centres d'achat, les lieux de sport, de divertissement. 
         Au déla de cette vie en ville, la discrimination va s'amoindrir vis-à-vis de la vie en campagne ou l'inclusion est très balbutiante voire inexistante. 
         <br>
@@ -1913,7 +1913,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
           </strong>
         </span>
         <p>
-          <br>Il n'y a aucun doute que quand les un-es mangent à leur faim et jettent les restes dans les poubelles, à quelque part à travers le monde, il y a aussi d'autres qui meurent de faim. 
+          Il n'y a aucun doute que quand les un-es mangent à leur faim et jettent les restes dans les poubelles, à quelque part à travers le monde, il y a aussi d'autres qui meurent de faim. 
           <br>
            C'est une réalité paradoxale qui touche malheureusement un grand nombre de gens. Tiki N'Yiki ne peut pas solutionner ce problème d'insécurité alimentaire avec un coup de bâton magique. Néanmoins elle propose trois (3) approches pour permettre de mitiger cette réalité. 
           <br>
