--- a/index.html
+++ b/index.html
@@ -523,8 +523,7 @@ hr{
  text-align: left; 
  color:rgba(151, 149, 149, 0.975);
  word-spacing: 1px;
- border-top: 0.1rem solid rgba(179, 179, 179, 0.744);
- border-bottom: 0.1rem solid rgba(179, 179, 179, 0.744);
+ border: 0.1rem solid rgba(179, 179, 179, 0.744);
  
 }
 
