--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0.5px 1.8rem 0.1px #45454536;
+                 box-shadow: 0 0.5px 1.75rem 0.1px #4d4d4d36;
                  border-bottom: 4.47rem solid #fffffffd;  
                  border-top-left-radius: 1.95rem;
                  border-top-right-radius: 1.95rem;
@@ -1048,7 +1048,8 @@ box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
   justify-items: center;
   column-gap: 1rem;
   width: 100%;
-  height: auto;
+  height: 330px;
+  padding: 5px;
 }
 
 
@@ -1091,7 +1092,7 @@ box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
     justify-content: space-between;
     text-align: justify;
     width: 74%;
-    height: 885px;
+    height: 810px;
     font-size: 17.5px; 
     color: rgba(11, 11, 11, 0.983);
     line-height: 30px;
@@ -1100,37 +1101,46 @@ box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 .Healthy{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 0.5rem;
+  column-gap: 1rem;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: auto;
+  height: 270px;
   font-size: 17.5px; 
   color: rgba(11, 11, 11, 0.983);
   line-height: 30px;
   font-family: 'Inter' sans sherif;
 }
 
-.Healthy img{
+.CHRZiniare img{
   width: 100%;
-  height: 40%;
+  height: 43%;
+}
+
+.MediKLogo img{
+  width: 100%;
+  height: 43%;
+}
+
+
+
+.Healthy:hover{
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 
 .SEKU{
   display: grid;
-  grid-template-rows: 0.45fr 0.45fr;
-  column-gap: 1rem;
+  grid-template-rows: 0.5fr 0.5fr;
+  row-gap: 1rem;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
   height: 670px;
-  margin-top: 0.5rem;
   font-size: 17.5px; 
   color: rgba(11, 11, 11, 0.983);
   line-height: 30px;
   font-family: 'Inter' sans sherif;
-  padding: 7px;
 }
 
 .Avenue{
@@ -1611,7 +1621,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 </span>
   <p>
     <br>
-    Les personnes handicapées sont discriminées partout à travers le monde. Mais celles d'Afrique et spécialement du Burkina Faso expérimentent de <a href="https://www.ouestaf.com/personnes-vivant-avec-un-handicap-marginalisees-par-letat-au-burkina/" target="_blank">sévères marginalisations de l'état</a>.
+    Les personnes handicapées sont discriminées partout à travers le monde. Mais celles d'Afrique et spécialement du Burkina Faso expérimentent de <a href="https://www.ouestaf.com/personnes-vivant-avec-un-handicap-marginalisees-par-letat-au-burkina/" target="_blank">sévères marginalisations de l'état qui était censée les aider ou même de la communauté.</a>.
     <br>  
     <br>
     Sinon pourquoi des personnes handicapées dépendantes et vivant isolées sont oubliées quand on doit leur apporter à manger ou à boire, les faire prendre un bain ou leur apporter un besoin quelconque ?
@@ -1623,7 +1633,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
     Pourquoi les personnes handicapées sont mises de côté, ignorées quand il s'agit de leur apporter des soins médicaux qu'il faut ? 
     <br>  
     <br>
-    <em style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: green;">L'unique réponse satisfaisante et commune à ces questions est : 
+    <em style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: green;">La probable réponse proche à ces questions est : 
       <a href="https://www.chrc-ccdp.gc.ca/fr/droits-de-la-personne/quest-ce-que-la-discrimination" target="_blank"><b style="color: red;">LA DISCRIMINATION. </b> </em>  </a> 
     <br>  
     <br>
@@ -1793,6 +1803,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       <div class="DUQUE">
 
       <div class="TXT">
+      <br>
      <span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
       <strong>
         1. Education
@@ -1847,7 +1858,9 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     </a>
 
   </div>
+
   </div>
+
 </div>
 
       <div class="HLTHY">
@@ -1876,7 +1889,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
         <div class="Healthy">
         
-        <div >
+        <div class="MediKLogo">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3vWl37Fm3qb7GrEwYt8fHYGPvol1Ks4_ypiYRnWOFcbvSzoaEbJZVzqmX14k3Sf--nuM&usqp=CAU" alt="Centre hospitalier régional">
         <figure>
           <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
@@ -1885,7 +1898,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     </figure>
     </div>
   
-    <div >
+    <div class="CHRZiniare">
     <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Emergency Montreal Hospital">
     <figure>
       <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
@@ -1911,6 +1924,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
           </strong>
         </span>
         <p>
+          <br>
           Il n'y a aucun doute que quand les un-es mangent à leur faim et jettent les restes dans les poubelles, à quelque part à travers le monde, il y a aussi d'autres qui meurent de faim. 
           <br>
            C'est une réalité paradoxale qui touche malheureusement un grand nombre de gens. Tiki N'Yiki ne peut pas solutionner ce problème d'insécurité alimentaire avec un coup de bâton magique. Néanmoins elle propose trois (3) approches pour permettre de mitiger cette réalité. 
