--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: #35a9e3e6;
+                 background: -webkit-linear-gradient(#35a9e3f9,#3dbefff7);
                  width: 100%;
                  height: 98px;
                  object-fit: cover;
@@ -529,7 +529,7 @@ hr{
 
 .YT:hover{
   border: none;
-  animation: 1s linear;
+  transition: 0.46s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
  }
  .YTY{
@@ -537,7 +537,8 @@ hr{
  }
 
  .YTY:hover{
-  box-shadow: 5px 7px 0.6rem 0.5px rgba(181, 181, 181, 0.811);
+  transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
  }
 
  
@@ -562,8 +563,8 @@ opacity: 1;
 .YTP:hover{
   color:green;
   border: none;
-  animation: 1s linear;
-  box-shadow: 5px 7px 0.6rem 0.5px rgba(181, 181, 181, 0.811);
+  transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 .YTPP{
@@ -573,7 +574,8 @@ opacity: 1;
 }
 
 .YTPP:hover{
-  box-shadow: 5px 7px 0.6rem 0.5px rgba(181, 181, 181, 0.811);
+  transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 
@@ -612,8 +614,8 @@ opacity: 1;
 .TYP:hover{
   color: #000;
   padding: 3px;
-  animation: 1s linear;
-  box-shadow: 5px 7px 0.6rem 0.5px rgba(181, 181, 181, 0.811);
+  transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 .button2{
@@ -756,8 +758,8 @@ animation: auto 12s infinite ease-in;
     word-spacing: 1px;
 }
 .k1 img{
-  width: 99%;
-  height: 650px;
+  width: 100%;
+  height: auto;
   background: #fff;
 }
 
@@ -773,8 +775,8 @@ animation: auto 12s infinite ease-in;
 }
 .Noel:hover{
   padding: 4px;
-  animation: 1s linear;
-  box-shadow: 10px 7px 0.58rem 0.5px rgba(168, 168, 168, 0.811);
+  transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 .Noel img{
@@ -865,8 +867,8 @@ animation: auto 12s infinite ease-in;
 }
 
 .AFRI:hover{
-  animation: 1s linear;
-  box-shadow: 10px 7px 0.58rem 0.5px rgba(168, 168, 168, 0.811);
+  transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
   padding: 5px;
 }
 
@@ -875,19 +877,23 @@ animation: auto 12s infinite ease-in;
 }
 
 .BUR:hover{
-  animation: 1s linear;
-  box-shadow: 10px 7px 0.58rem 0.5px rgba(168, 168, 168, 0.811);
+  transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
   padding: 5px;
 }
 
 .PERCU:hover{
-  animation: 1s linear;
-  box-shadow: 7px 7px 0.58rem 0.5px rgba(168, 168, 168, 0.811);
+  transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
+.SUNSET img{
+  width: 100%;
+height: 728px;
+}
 .SUNSET:hover{
-  animation: 1s linear;
-  box-shadow: 10px 7px 0.58rem 0.5px rgba(168, 168, 168, 0.811);
+  transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 .k2{  display: flex;
@@ -1001,12 +1007,12 @@ animation: auto 12s infinite ease-in;
 
 .AK:hover{
   padding: 4px;
-  animation: 1s linear;
+  transition: 0.46s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 .KA:hover{
-  animation: 1s linear;
+  transition: 0.46s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
@@ -1024,8 +1030,8 @@ animation: auto 12s infinite ease-in;
   
 }
 .student:hover{
-animation: 1s linear;
-box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+  transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 .student img{
@@ -1035,7 +1041,7 @@ box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 
 .DUQUE{
   display: grid; 
-  grid-template-columns: 1fr;
+  grid-template-rows: 0.1fr 0.1fr;
   justify-content: center;
   justify-items: center;
   width: 100%;
@@ -1043,35 +1049,34 @@ box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 .DUQUE1{
   display: grid; 
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 0.45fr 0.45fr;
   justify-content: space-between;
   justify-items: center;
   column-gap: 1rem;
   width: 100%;
-  height: 330px;
-  padding: 5px;
+  height: 250px;
 }
 
 
 
 .ORDI1 img{
-width: 96.9%;
-height: auto;
+width: 100%;
+height: 240px;
 }
 
 .ORDI1:hover{
-  animation: 1s linear;
-box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+  transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 .ORDI2 img{
 width: 100%;
-height: auto;
+height: 240px;
 }
 
 .ORDI2:hover{
-  animation: 1s linear;
-box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+  transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 .TXT{
@@ -1092,7 +1097,7 @@ box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
     justify-content: space-between;
     text-align: justify;
     width: 74%;
-    height: 827px;
+    height: auto;
     font-size: 17.5px; 
     color: rgba(11, 11, 11, 0.983);
     line-height: 30px;
@@ -1101,7 +1106,7 @@ box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 .Healthy{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 1rem;
+  column-gap: 4rem;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
@@ -1112,19 +1117,35 @@ box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
   font-family: 'Inter' sans sherif;
 }
 
+.CHRZiniare{
+  width: 100%;
+  height: auto;
+  padding: 5px;
+}
+
+
 .CHRZiniare img{
   width: 100%;
-  height: 43%;
+  height: 210px;
 }
-
+.CHRZiniare:hover{
+transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
+}
 .MediKLogo img{
   width: 100%;
-  height: 43%;
+  height: 210px;
 }
 
 
 
-.Healthy:hover{
+.MedikLogo{
+  width: 100%;
+  height: auto;
+  }
+
+.MediKLogo:hover{
+transition: 0.46s linear;
   box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
@@ -1158,8 +1179,8 @@ box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 .Avenue:hover{
-  animation: 1s linear;
-box-shadow: 8px 8px 0.7rem 0.5px rgba(165, 165, 165, 0.724);
+  transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 .CC{
@@ -1177,8 +1198,8 @@ box-shadow: 8px 8px 0.7rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 .CC1:hover{
-  animation: 1s linear;
-box-shadow: 8px 8px 0.7rem 0.5px rgba(165, 165, 165, 0.724);
+  transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 .CC2 img{
@@ -1186,8 +1207,8 @@ box-shadow: 8px 8px 0.7rem 0.5px rgba(165, 165, 165, 0.724);
   height: 85%;
 }
 .CC2:hover{
-  animation: 1s linear;
-box-shadow: 8px 8px 0.7rem 0.5px rgba(165, 165, 165, 0.724);
+  transition: 0.46s linear;
+  box-shadow: 8px 8px 0.6rem 0.5px rgba(165, 165, 165, 0.724);
 }
 
 </style>
@@ -1823,7 +1844,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <b style="color: green"> A. Des activités prescolaires</b> pour enfants en situation de handicap car ces derniers ne sont toujours pas les bienvenus dans certains établissements. 
     <br>
     <br>
-    <b style="color: green">B. Des cours de soutien pour étudiant-es</b> sont implementés suite à une demande croissante d'étudiant-es qui voudraient avoir plus d'explications sur des cours mal compris en classe et que dans la timidité certaines questions n'ont pas pu être posées au professeur. 
+    <b style="color: green">B. <a href="https://dictionnaire.reverso.net/francais-definition/soutien+scolaire" target="_blank"> Des cours de soutien</a> pour étudiant-es</b> sont implementés suite à une demande croissante d'étudiant-es qui voudraient avoir plus d'explications sur des cours mal compris en classe et que dans la timidité certaines questions n'ont pas pu être posées au professeur. 
     Un des moyens de solutionner ce problème était d'organiser des cours de soutien deux fois par semaine pour aider ces étudiant-es grâce à l'aide d'enseignant-es bénévoles nationaux et internationaux ayant adhéré à la vision de Tiki N'Yiki.
     <br>
     <br>
@@ -1835,7 +1856,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     </div>
 
   <div class="DUQUE1">
-  
+    <a href="https://www.francaisfacile.com/exercices/exercice-francais-2/exercice-francais-110491.php" target="_blank">
     <div class="ORDI1">
       <img src="https://www.zupimages.net/up/23/24/1dre.jpg" alt="Ardoise">
       <figure>
@@ -1844,17 +1865,19 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </figcaption>
 </figure>
     </div >
+  </a>
 
     <a href="https://blogs.worldbank.org/fr/education/preparer-les-filles-pour-lavenir-de-lafrique-approches-de-lautonomisation-par-les" target="_blank">
-  <div class="ORDI2">
+  
+      <div class="ORDI2">
         <img src="https://www.zupimages.net/up/23/24/umq5.jpg" alt="Enseignement au Burkina Faso">
         <figure>
         <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: 3px;">
         Initiation de filles à l'ordinateur
     </figcaption>
 </figure>
-
       </div>
+
     </a>
 
   </div>
@@ -1893,7 +1916,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3vWl37Fm3qb7GrEwYt8fHYGPvol1Ks4_ypiYRnWOFcbvSzoaEbJZVzqmX14k3Sf--nuM&usqp=CAU" alt="Centre hospitalier régional">
         <figure>
           <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
-            Logo médical
+            Docteur de Coeur
             </figcaption>
     </figure>
     </div>
