--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       grid-template-rows: 0.65fr 1fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: -webkit-linear-gradient(#35a9e3f9,#3dbefff7);
+                 background: -webkit-linear-gradient(#35a9e3f9,#45c0fded);
                  width: 100%;
                  height: 98px;
                  object-fit: cover;
@@ -1614,7 +1614,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 
 </a>
 
-<a href="https://en.wikipedia.org/wiki/Sunset" target="_blank">
+<a href="https://fr.wikipedia.org/wiki/Coucher_de_soleil" target="_blank">
 
 <div class="SUNSET">
   <img src="https://www.zupimages.net/up/23/23/gwuk.png" alt="Soleil couchant">
