--- a/index.html
+++ b/index.html
@@ -995,16 +995,23 @@ height: 728px;
   justify-content: center; 
   align-items: center; 
   background: transparent; 
-  border: 0.2rem solid #fff; 
+  border: 0.14rem solid #bababa; 
   border-radius: 50%; 
   font-family: 'georgia'; 
   font-size: 20px; 
   line-height: 30px;
+  color: #fff;
+  cursor: pointer;
 }
 
 .FTR:hover{
-  transition: 0.4s linear;
-  box-shadow: 8px 8px 1rem 0.15px rgba(233, 233, 233, 0.956);
+  border: 0.15rem solid #fff; 
+  background: #191919dd;
+  transition: 0.3s linear;
+  box-shadow: 10px 7px 1.25rem 0.1px rgba(242, 242, 242, 0.956);
+}
+a:visited{
+  color: rgba(255, 18, 145, 0.94);
 }
 .Ecole{
   display: grid;
@@ -2157,6 +2164,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 <div class="footer">
    
     <div class="FTR">
+
+      <a href="https://www.cairn.info/revue-le-francais-aujourd-hui-2012-2-page-19.htm" target="_blank"> 
     Le Handicap n'est pas une Fatalité !
     <br>
     <br>
@@ -2164,8 +2173,11 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <br>
     Copyright © Tiki N'Yiki 2023 
 </div>
+</a>
 
 </div>
+
 </body>
+
 </html>
 </html>
